feat: :sparkles: orders domain without test
