# src/market/delivery/http/dto.go
@@ -22,12 +22,26 @@ import (
 // MarketDto describes a tradable pair
 // swagger:model MarketDto
 type MarketDto struct {
-	ID                       uint   `json:"id"`
-	ExchangeName             string `json:"exchange_name" example:"ompfinex"`
-	MarketName               string `json:"market_name" example:"BTC/USDT"`
-	IsActive                 bool   `json:"is_active" example:"true"`
-	ExchangeMarketIdentifier string `json:"exchange_market_identifier" example:"BTC/USDT"`
-	MegaMarketID             uint   `json:"mega_market_id" example:"1"`
+	ID                          uint   `json:"id"`
+	ExchangeName                string `json:"exchange_name" example:"ompfinex"`
+	MarketName                  string `json:"market_name" example:"BTC/USDT"`
+	IsActive                    bool   `json:"is_active" example:"true"`
+	ExchangeMarketIdentifier    string `json:"exchange_market_identifier" example:"BTC/USDT"`
+	MegaMarketID                uint   `json:"mega_market_id" example:"1"`
+	ExchangeMarketFeePercentage string `json:"exchange_market_fee_percentage" example:"0.01"`
+}
+type MegaMarketDto struct {
+	ID                     uint            `json:"id"`
+	IsActive               bool            `json:"is_active" example:"true"`
+	ExchangeMarketNames    string          `json:"exchange_market_names" example:"BTC/USDT"`
+	FeePercentage          decimal.Decimal `json:"fee_percentage" example:"0.01"`
+	SourceTokenSymbol      string          `json:"source_token_symbol" example:"BTC"`
+	DestinationTokenSymbol string          `json:"destination_token_symbol" example:"USDT"`
+}
+
+type MarketAndMegaMarketDto struct {
+	MarketDto
+	MegaMarket MegaMarketDto `json:"mega_market"`
 }
 
 // ListPairsResponse lists pairs
@@ -41,46 +55,64 @@ type ListPairsResponse struct {
 
 func MarketDtoFromDomain(m domain.Market) MarketDto {
 	return MarketDto{
-		ID:                       m.ID,
-		ExchangeName:             m.ExchangeName,
-		MarketName:               m.MarketName,
-		IsActive:                 m.IsActive,
-		ExchangeMarketIdentifier: m.ExchangeMarketIdentifier,
-		MegaMarketID:             m.MegaMarketID,
+		ID:                          m.ID,
+		ExchangeName:                m.ExchangeName,
+		MarketName:                  m.MarketName,
+		IsActive:                    m.IsActive,
+		ExchangeMarketIdentifier:    m.ExchangeMarketIdentifier,
+		MegaMarketID:                m.MegaMarketID,
+		ExchangeMarketFeePercentage: m.ExchangeMarketFeePercentage.String(),
+	}
+}
+func MegaMarketDtoFromDomain(m domain.MegaMarket) MegaMarketDto {
+	return MegaMarketDto{
+		ID:                     m.ID,
+		IsActive:               m.IsActive,
+		ExchangeMarketNames:    m.ExchangeMarketNames,
+		FeePercentage:          m.FeePercentage,
+		SourceTokenSymbol:      m.SourceTokenSymbol,
+		DestinationTokenSymbol: m.DestinationTokenSymbol,
+	}
+}
+func MarketAndMegaMarketDtoFromDomain(m domain.Market, megaMarket domain.MegaMarket) MarketAndMegaMarketDto {
+	return MarketAndMegaMarketDto{
+		MarketDto:  MarketDtoFromDomain(m),
+		MegaMarket: MegaMarketDtoFromDomain(megaMarket),
 	}
 }
 
 // fromDomain converts a slice of domain.Market into FetchAndUpdateMarketsResponse
-func FetchAndUpdateMarketsResponseFromDomain(markets []domain.Market) FetchAndUpdateMarketsResponse {
-	dtos := make([]MarketDto, len(markets))
+func FetchAndUpdateMarketsResponseFromDomain(markets []domain.Market, megaMarketMap map[uint]domain.MegaMarket) FetchAndUpdateMarketsResponse {
+	dtos := make([]MarketAndMegaMarketDto, len(markets))
 	for i, m := range markets {
-		dtos[i] = MarketDtoFromDomain(m)
+		dtos[i] = MarketAndMegaMarketDtoFromDomain(m, megaMarketMap[m.MegaMarketID])
 	}
 	return FetchAndUpdateMarketsResponse{Markets: dtos}
 }
 
 // swagger:model ListPairsResponseBody
 type FetchAndUpdateMarketsResponse struct {
-	Markets []MarketDto `json:"markets"`
+	Markets []MarketAndMegaMarketDto `json:"markets"`
 }
 
 // CreateQuoteRequestBody is the payload to request a quote
 // swagger:model CreateQuoteRequestBody
 type GetBestExchangePriceByVolumeRequestBody struct {
-	MegaMarketID uint   `json:"mega_market_id" example:"1"`
+	MegaMarketID uint   `json:"mega_market_id" example:"4"`
 	Volume       string `json:"volume" example:"100.0"` // decimal string
+	IsBuy        bool   `json:"is_buy" example:"true"`
 }
 
 // CreateQuoteResponseBody returns a quote
 // swagger:model CreateQuoteResponseBody
 type GetBestExchangePriceByVolumeResponse struct {
-	Price  decimal.Decimal `json:"price" example:"100.0"`
-	Market MarketDto       `json:"market"`
+	Price  decimal.Decimal        `json:"price" example:"100.0"`
+	Market MarketAndMegaMarketDto `json:"market"`
 }
 
-func GetBestExchangePriceByVolumeResponseFromDomain(m *domain.Market, price decimal.Decimal) GetBestExchangePriceByVolumeResponse {
+func GetBestExchangePriceByVolumeResponseFromDomain(m *domain.Market, mm *domain.MegaMarket, price decimal.Decimal) GetBestExchangePriceByVolumeResponse {
 	return GetBestExchangePriceByVolumeResponse{
 		Price:  price,
-		Market: MarketDtoFromDomain(*m),
+		Market: MarketAndMegaMarketDtoFromDomain(*m, *mm),
 	}
 }
